# blackhole

./: README.md  architecture.drawio
desktop/: .env  pnpm-lock.yaml
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/helpers/: token.rs
desktop/src-tauri/src/security/: encryption.rs
desktop/src/components/buttons/: upload-file.component.tsx
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: download.rs  upload.rs
server/src/database/: context.rs
server/src/handlers/: index.rs
server/src/helpers/: token.rs
server/src/interfaces/: file_upload.rs
server/src/models/: file_upload.rs
server/src/repositories/: mod.rs  sqld_file_upload.rs
