[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.6.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.4.0", features = ["v4"] }